@@ -1,5 +1,7 @@
 cmake (2.8.0-4) UNRELEASED; urgency=low
 
+  * Update bootstraptest_increase_timeout.diff with upstream version. My previous
+    patch didn't work.
 
  -- Modestas Vainius <modestas@vainius.eu>  Mon, 23 Nov 2009 19:44:53 +0200
 
